@@ -85,8 +85,8 @@
 //   synchronization.  UIthreads are similar to pthreads, but are based 
 //   on an earlier version of the Posix threads standard.
 // * __STL_LONG_LONG if the compiler has long long and unsigned long long
-//   types.  (They're not in the C++ standard, but they are expected to be 
-//   included in the forthcoming C9X standard.)
+//   types.  (They're not in the C++ standard, but they are included
+//   in the C99 standard.)
 // * __STL_THREADS is defined if thread safety is needed.
 // * __STL_VOLATILE is defined to be "volatile" if threads are being
 //   used, and the empty string otherwise.
